# danny

./: .gitignore  Cargo.toml  Justfile  README.md  baselines.csv  baselines.sh  deploy.retry  deploy.yml  experiments.sh  profile.csv.bz2  profile.sh  requirements.txt  result.csv.bz2  run-danny.sh  rust-toolchain  step_counters.csv.bz2  test.env
.github/workflows/: rust.yml
analysis/: .gitignore  Dockerfile  Makefile  best.html  best.tex  latex.R  packages.R  plot_full.R  plot_k_dep.R  plot_load.R  plot_profile.R  plot_recall_experiment.R  plot_scalability.R  plot_sketches.R  plot_subproblem_size.R  plot_system.R  plot_two_level.R  plots.R  tables.R
analysis/.devcontainer/: devcontainer.json
benches/: benchmarks.rs
danny/: Cargo.toml
danny-base/: Cargo.toml
danny-base/src/: bloom.rs  bucket.rs  lib.rs  lsh.rs  measure.rs  prefix_hash.rs  sketch.rs  types.rs
danny-utilities/: Cargo.toml
danny/benches/: benchmarks.rs
danny/examples/: monitor.rs
danny/src/: baseline.rs  bloom.rs  cartesian.rs  config.rs  experiment.rs  io.rs  join.rs  lib.rs  logging.rs  main.rs  operators.rs  sysmonitor.rs  types.rs
danny/src/lsh/: adaptive.rs  algorithms.rs  functions.rs  mod.rs  operators.rs  repetition_stopwatch.rs
danny/src/lsh/algorithms/: hu_et_al.rs  local_lsh.rs  mod.rs  one_level_lsh.rs  one_round.rs  two_level_lsh.rs  two_round.rs
danny/src/migrations/: v1.sql  v10.sql  v11.sql  v12.sql  v2.sql  v3.sql  v4.sql  v5.sql  v6.sql  v7.sql  v8.sql  v9.sql
datasets/: prepare.py
datasets/scripts/: README.md  aol-data.sh  shuflength.py
experiments/: Justfile  adaptive.yaml  all_to_all_baselines.sh  baselines.yaml  compare.yaml  diverse-baseline.yaml  diverse.yaml  drill.yaml  experiment.R  experiment.py  fixed.yaml  fixed_lsh.sh  hu-et-al.yaml  hu_et_al_comparison.yaml  json_to_table.py  lsh.yaml  lsh.yml  plot_fixed.R  plot_fixed_lsh.py  run.py  test.yml  vernica_join.yaml
experiments/2019-12-12-prelims/: hu-et-al.yaml  two-round-lsh.yaml
experiments/2019-12-18-prelims/: one-round-lsh.yaml  two-round-lsh.yaml
experiments/2019-12-18-prelims-with-sketches/: hu-et-al.yaml  one-round-lsh.yaml  two-round-lsh.yaml
experiments/2019-12-18-two-round-small-inner-k/: two-round-lsh.yaml
experiments/2020-01-07-opening-figure/: hu-et-al.yaml
experiments/2020-01-13-deduplication-cost/: config.yaml
experiments/2020-01-13-hu-et-al-and-one-round/: config.yaml
experiments/2020-01-13-two-round-lsh/: config.yaml
experiments/2020-01-14-complete-one-round/: config.yaml
experiments/2020-01-14-complete-opening-figure/: config.yaml
experiments/2020-01-14-completing-two-round-algo/: config.yaml
experiments/2020-01-14-one-round-sketching/: config.yaml
experiments/2020-01-15-deduplication-cost/: config.yaml
experiments/2020-01-16-one-round-full/: config.yaml
experiments/2020-01-19-two-round-full/: config.yaml
experiments/2020-01-27-hu-et-al-full/: config.yaml
experiments/2020-02-07-sift-full/: config.yaml
experiments/2020-02-11-aol-full/: config.yaml
src/: baseline.rs  bloom.rs  config.rs  dataset.rs  experiment.rs  io.rs  lib.rs  logging.rs  lsh.rs  main.rs  measure.rs  operators.rs  sketch.rs  stats.rs  types.rs
src/lsh/: adaptive.rs  mod.rs  (+6 more)
(+14 files in other folders)
