[package]
name = "danny"
version = "0.1.0"
authors = ["Matteo Ceccarello <ceccarel@dei.unipd.it>"]

[dependencies]
timely = "0.8"
abomonation = "0.7"
clap = "2.32"
envy = "0.3"
serde = "1"
serde_derive = "1"
# syslog = "^4.0"
log = "0.4"
env_logger = "0.6"
log-panics = "2.0.0"
smallbitvec = "2.3"
rand = "0.6"
rand_xorshift = "0.1.0"
probabilistic-collections = "0.5"
heapsize = "0.4"

