[package]
name = "danny-base"
version = "0.1.0"
authors = ["Matteo Ceccarello <mcec@itu.dk>"]
edition = "2018"

[dependencies]
abomonation = "0.7"
abomonation_derive = "0.3"
serde = "1"
serde_derive = "1"
log = "0.4"
smallbitvec = "2.3"
rand = "0.6"
rand_xorshift = "0.1.0"
chrono = "0.4"
siphasher = "0.3"
jemallocator = "0.1.8"
bincode = "1.0"
packed_simd = "0.3.0"
lazy_static = "1.3"
statrs = "0.11"

[dev-dependencies]
probabilistic-collections = "0.5"
