[package]
name = "danny-utilities"
version = "0.1.0"
authors = ["Matteo Ceccarello <mcec@itu.dk>"]
edition = "2018"

[dependencies]
danny-base = { path = "../danny-base" }
danny = { path = "../danny" }
clap = "2.32"
env_logger = "0.6"
log-panics = "2.0.0"
envy = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
log = "0.4"
rayon = "1.0"
crossbeam-channel = "0.5"
rand = "0.6"
rand_xorshift = "0.1.0"
progress-logger = "0.1.1"
rusqlite = { version = "0.25", features = ["bundled"] }
argh = "0.1"
sha2 = "0.8"
csv = "1.1"
bzip2 = "0.3"
chrono = "0.4"
