[package]
name = "danny"
version = "0.1.0"
authors = ["Matteo Ceccarello <ceccarel@dei.unipd.it>"]
edition = "2018"

[features]

default = [
    "one-round-lsh",
    "two-round-lsh",
    "hu-et-al",
    "all-2-all",
    "seq-all-2-all",
    "sketching"
]

sketching = []
one-round-lsh = []
two-round-lsh = []
hu-et-al = []
all-2-all = []
seq-all-2-all = []

[dependencies]
danny-base = { path = "../danny-base" }
timely = "0.12"
abomonation = "0.7"
abomonation_derive = "0.3"
rusqlite = { version = "0.23", features = ["bundled"] }
argh = "0.1"
base64 = "0.11"
serde = "1"
serde_derive = "1"
log = "0.4"
env_logger = "0.6"
log-panics = "2.0.0"
rand = "0.6"
rand_xorshift = "0.1.0"
chrono = "0.4"
jemallocator = "0.1.8"
bincode = "1.0"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
progress-logger = "0.1.1"
sha2 = "0.8"
pprof = {version = "0.4.1", features = ["flamegraph", "protobuf"]}

[build-dependencies]
vergen = "3.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmarks"
harness = false
